# claude-sessions-dashboard

./: .gitignore  README.md  REQUIREMENTS.md  claude_dashboard.py  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json
docs/: ARCHITECTURE.md  session_summary_2026-06-26.md
docs/diagnostics/: 2026-06-27-card-click-activation-chain.md
docs/plans/: 2026-06-15-claude-sessions-dashboard.md  2026-06-21-hook-driven-refactor.md  2026-06-21-test-plan.md  2026-06-26-empty-state-and-card-highlight-design.md
plugins/claude-sessions-dashboard/.claude-plugin/: plugin.json
plugins/claude-sessions-dashboard/hooks/: hooks.json
scripts/: build_exe.py  debug_render.py  diag_terminal_windows.py  diag_title_match.py  screenshot_smoke.py  verify_activate.py  verify_click.py  verify_real_data.py
src/collector/: collector.py  models.py  process_monitor.py  project_index.py  session_parser.py  session_scanner.py
src/core/: pairing_store.py  session_registry.py  status.py
src/server/: hook_server.py  router.py
src/ui/: card_widget.py  empty_indicator.py  indicator_widget.py  main_window.py  signal_bus.py  tray.py
src/utils/: config.py  paths.py  single_instance.py
src/win32/: autostart.py  windows_focus.py
tests/: conftest.py  test_collector.py  test_config.py  test_empty_indicator.py  test_hook_server.py  test_indicator_widget.py  test_models.py  test_paths.py  test_process_monitor.py  test_router.py  test_session_parser.py  test_session_registry.py  test_session_scanner.py
tests/fixtures/projects/proj1/: sess-A.jsonl  sess-B.jsonl
